# notion-retrospect-upload

./: .gitignore  README.md  gpt_prompt.py  main.py  make_crontab_sh_file.py  pyproject.toml  read_pages.py
script/: run-project.sh  run-this-for-everything.sh
